Update message from service

--- a/src/components/MonsterSlayer/MonsterSlayer.html
+++ b/src/components/MonsterSlayer/MonsterSlayer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="app">
-	<div id="hello">{{serviceResult}}</div>
+	<div id="hello">Service Message: {{serviceResult}}</div>
     <section class="row">
         <div class="small-6 columns">
             <h1 id="player" class="text-center">YOU</h1>
