add service test page, service tests, test tags, update readme

--- a/src/components/MonsterSlayer/MonsterSlayer.html
+++ b/src/components/MonsterSlayer/MonsterSlayer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div id="app">
-	<div id="hello">Service Message: {{serviceResult}}</div>
+	<div id="service-message">Service Message: {{serviceResult}}</div>
     <section class="row">
         <div class="small-6 columns" id="you-score-section">
             <h1 class="text-center" id="you-header">YOU</h1>
